--- a/src/index.hbs
+++ b/src/index.hbs
@@ -6,6 +6,7 @@
 		<meta name="description" content="Electron Angular Webpack Demo App">
 		<base href="<%= htmlWebpackPlugin.options.baseHref %>">
 		<title>Electron Angular Webpack</title>
+        <link rel="stylesheet" href="bulma.min.css">
         <link rel="stylesheet" href="global.scss">
     </head>
 
