--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="head">
-    <img src="../assets/images/logo.png" alt="Logo">
-    <h1>It works</h1>
+<div>
+    <app-articles></app-articles>
 </div>
