Update default page - add name - add loader gif

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -3,15 +3,15 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="Electron Angular Webpack Demo App">
+		<meta name="description" content="Spinefeed">
 		<base href="<%= htmlWebpackPlugin.options.baseHref %>">
-		<title>Electron Angular Webpack</title>
+		<title>Spinefeed</title>
         <link rel="stylesheet" href="bulma.min.css">
         <link rel="stylesheet" href="global.scss">
     </head>
 
 	<body>
-		<demo-app>Loading ...</demo-app>
+		<demo-app><img src="./assets/images/loader.gif" style="position: block;margin:20px;" alt="Loading..."></demo-app>
 	</body>
 
 </html>
