Update UI - add loader gif to articles - implement user info component

--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="!isLoading">
+<div [hidden]="!isLoading" class="articles-loader">
     <img src="../../../assets/images/loader.gif">
 </div>
 <div class="articles">
