--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<div>
-    <app-articles></app-articles>
+<div class="app-container">
+    <div class="columns">
+        <div class="column is-one-fifth">
+            <app-user-info class="full"></app-user-info>
+        </div>
+        <div class="column is-three-fifths">        
+            <app-articles class="full"></app-articles>
+        </div>
+        <div class="column is-one-fifth">
+        </div>
+    </div>
 </div>
