--- a/src/app/components/articles/articles.component.scss
+++ b/src/app/components/articles/articles.component.scss
@@ -4,6 +4,7 @@ h2 {
 }
 .articles {
     margin-top:50px;
+    padding-left: 10px;
 }
 
 .article {
@@ -20,4 +21,10 @@ h2 {
 
 .article a {
     color:inherit;
+}
+
+.articles-loader {
+    position: absolute;
+    left: 24.5%;
+    top: 50px;
 }
