Implement path selector and user info components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
         <div class="column is-one-fifth">
             <app-user-info class="full"></app-user-info>
         </div>
-        <div class="column is-three-fifths">        
+        <div class="column is-three-fifths">
+            <app-path-selector class="full"></app-path-selector>
             <app-articles class="full"></app-articles>
         </div>
         <div class="column is-one-fifth">
