Works on load and change - does not hit file systemw when params don't change

--- a/src/app/components/path-selector/path-selector.component.html
+++ b/src/app/components/path-selector/path-selector.component.html
@@ -1,4 +1,4 @@
-<input type="text" [(ngModel)]="path" class="path" (input)="pathChanged()">
+<input type="text" [(ngModel)]="path" class="path" (blur)="pathChanged()">
 <!--
     <input type=" file " webkitdirectory="true ">
 -->
